# time-series-anomaly-detection

./: .env.example  Dockerfile  README.md  docker-compose-monitoring.yml  docker-compose.yml  gunicorn.conf.py  main.py  prometheus.yml  pyproject.toml
app/: app.py  manager_singleton.py  model.py  model_manager.py  schema.py
app/config/: settings.py
app/config/db/: database.py  models.py
app/config/db/init/: models.sql
app/repository/: model_repository.py  plot_traning_repository.py
app/routers/: fit_model.py  load_test.py  plot.py  predict_value.py
app/schemas/: response_schema.py  schema.py
app/service/: load_test.py  model_manager.py  plot_training_service.py
